[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="MasterVolumeLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 136.0
margin_right = 537.0
margin_bottom = 172.0
rect_scale = Vector2( 1.35189, 1.06711 )
text = "Master Volume"
align = 1

[node name="MasterVolume" type="HSlider" parent="."]
margin_left = 384.0
margin_top = 128.0
margin_right = 616.0
margin_bottom = 206.0

[node name="MusicLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 200.0
margin_right = 537.0
margin_bottom = 236.0
rect_scale = Vector2( 1.35189, 1.06711 )
text = "Music Volume"
align = 1

[node name="MusicVolume" type="HSlider" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 616.0
margin_bottom = 270.0

[node name="SoundEffectsLabel" type="Label" parent="."]
margin_left = 408.0
margin_top = 272.0
margin_right = 546.0
margin_bottom = 308.0
rect_scale = Vector2( 1.35189, 1.06711 )
text = "Sound Effects Volume"
align = 1

[node name="SFXVolume" type="HSlider" parent="."]
margin_left = 384.0
margin_top = 264.0
margin_right = 616.0
margin_bottom = 342.0

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="MainMenuButton" type="TextureButton" parent="."]
margin_left = 832.0
margin_top = 448.0
margin_right = 1024.0
margin_bottom = 520.0

[node name="MainMenuLabel" type="Label" parent="MainMenuButton"]
margin_right = 192.0
margin_bottom = 72.0
text = "Return to Main Menu"
align = 1
valign = 1

[node name="CreditsButton" type="TextureButton" parent="."]
margin_top = 448.0
margin_right = 192.0
margin_bottom = 512.0

[node name="CreditsLabel" type="Label" parent="CreditsButton"]
margin_right = 192.0
margin_bottom = 64.0
text = "Credits"
align = 1
valign = 1

[connection signal="value_changed" from="MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
